--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="https://music.youtube.com/playlist?list=OLAK5uy_nIbZ8JG8K6pRKBZyPkp79x7DLWUKfUjDw" class="stream-btn youtube"><i class="fab fa-youtube"></i> YouTube Music</a>
             </div>
     
-            <p class="bio-text">My debut album, a space for a short bio about your music, a short artist bio, a snippet of the lyrics for a song, or a call to action. It’s your space to add context and share information with your fans.</p>
+            <p class="bio-text">Experience the flow of warm nights and endless skies — "Summer Spirit" is my first trance album, blending euphoric beats with emotional depth.</p>
             <p class="release-date">Released 2025</p>
             <div class="social-icons">
                 <a href="https://www.instagram.com/immerzed66/"><i class="fab fa-instagram"></i></a>
